# bn_cpp_template

./: .clang-format  CMakeLists.txt  README.md
src/: plugin.cpp
